--- a/css/main.css
+++ b/css/main.css
@@ -25,13 +25,23 @@ body {
   height: 100vh;
 }
 
+.image{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  
+  max-width: 50%;
+  height: auto;
+
+}
+
 .background {
   position: fixed;
   top: 0;
   bottom: 0;
   left: 0;
   right: 0;
-  background: url("https://vidyasheela.com/web-contents/website-components/Coming-Soon-Pages/website-under-construction-page-template-html/construction.jpg") #08093cb3;
+  background: url("../img/background.png") #08093cb3;
   background-size: cover;
   background-repeat: no-repeat;
   background-blend-mode: darken;
