--- a/css/main.css
+++ b/css/main.css
@@ -15,22 +15,23 @@ html {
   color: #222;
   font-size: 1em;
   line-height: 1.4;
+  font-family: 'Avenir', sans-serif;
+
 }
 
 body {
   padding: 0;
   margin: 0;
-  font-family: Tahoma, Geneva, Verdana, sans-serif;
+  font-family: 'Avenir', sans-serif;
   color: white;
   height: 100vh;
 }
 
 .image{
-  display: block;
   margin-left: auto;
   margin-right: auto;
 
-  max-width: 50%;
+  max-width: 30%;
   height: auto;
 
 }
